<resources>
    <string name="app_name">NotificationReplier</string>
    <string name="enableNotificationAccess">In order for the app to work properly, you need to enable notification access.</string>
    <string name="enableNotificationAccessInstractions">Press the \"Open Settings\" button, locate this app on the list shown and grant the Notification access</string>
    <string name="installWinApplicationPt1">You dont have our Windows app?</string>
    <string name="installWinApplicationPt2">find it here!</string>
    <string name="ok">Ok</string>
    <string name="welcome_">Welcome</string>
    <string name="failed_to_read_value">Failed to read value.</string>
    <string name="Please_enter_yourEmail">Please enter your Email</string>
    <string name="Please_enter_yourPassword">Please enter your Password</string>
    <string name="Oops__problem">Oops, problem!</string>
    <string name="ConnectionIssues">Connection Issues.</string>
    <string name="WrongEmail__Password">Wrong Email/Password.</string>
    <string name="WhyLogIn_">Why LogIn?</string>
    <string name="We_need_to_send_your_notifications_from_your_phone_to_your_computer">We need to send your notifications from your phone to your computer.</string>
    <string name="The_only_way_for_that___is_to_connect_both_of_them_with_the_same_account">The only way for that, is to connect both of them with the same account.</string>
    <string name="Proceed">Proceed</string>
    <string name="OpenSettings">Open Settings</string>
    <string name="Windows_App">Windows App</string>
    <string name="In_order_for_the_replyable_notifications_to_show_in_your_windows_computer___a_new_application_is_needed">In order for the replyable notifications to show in your windows computer, a new application is needed.</string>
    <string name="You_can_find_our_Windows_application_at_our_website_by_pressing_the_button">You can find our Windows application at our website by pressing the button</string>
    <string name="OpenWebsite">Open Website</string>
    <string name="You_have_to_type_yourUsername">You have to type your Username</string>
    <string name="You_have_to_type_yourEmailAddress">You have to type your Email Address</string>
    <string name="You_have_to_type_yourPassword">You have to type your Password</string>
    <string name="You_have_to_retype_yourPassword">You have to retype your Password</string>
    <string name="Passwords_don__t_match">Passwords don\'t match</string>
    <string name="User_profile_updated">User profile updated.</string>
    <string name="This_email_is_already_used_by_another_user">This email is already used by another user</string>
    <string name="Your_password_isn__t_strong_enough">Your password isn\'t strong enough</string>
    <string name="InvalidEmail_address">Invalid Email address</string>
    <string name="Sign_up_failed___try_again">Sign up failed, try again</string>
    <string name="Why_register__">Why register?</string>
    <string name="LogOut">Log Out</string>
    <string name="Are_you_sure_you_want_toLogOut__">Are you sure you want to Log Out?</string>
    <string name="DeleteAccount">Delete Account</string>
    <string name="Sorry_to_see_you_go">Sorry to see you go</string>
    <string name="For_verification_please_fill_your_credentials_below__">For verification please fill your credentials below.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Cancel">Cancel</string>
    <string name="Your_account_is_deleted">Your account is deleted</string>
    <string name="Something_went_wrong___please_try_again__">Something went wrong, please try again!</string>
    <string name="Wrong_Email_or_Password___please_try_again__">Wrong Email or Password, please try again!</string>
    <string name="This_background_service_is_needed_to_keep_the_app_up_and_running_for_listening_on_notifications_and_send_them_to_your_computer">This background service is needed to keep the app up and running for listening on notifications and send them to your computer</string>
    <string name="Service_is_running_background">Service is running background</string>
    <string name="Welcome">Welcome!</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Don__t_have_an_account_yet__">Don\'t have an account yet?</string>
    <string name="Sign_up__">Sign up!</string>
    <string name="Back">Back</string>
    <string name="Username">Username</string>
    <string name="Confirm_your_Password">Confirm your Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Already_have_an_Account__">Already have an Account?</string>
    <string name="Sign_in__">Sign in!</string>
    <string name="Log_Out">Log Out</string>
    <string name="Email___">Email:</string>
    <string name="Password___">Password:</string>
    <string name="Settings">Settings</string>
    <string name="Some_companies_stop_app_for_running_in_the_background_after_a_period_of_time___eg___Samsung____">Some companies stop app for running in the background after a period of time (eg. Samsung).</string>
    <string name="You_can_prevent_this_for_apps_you_choose_by_following_some_instructions_from_this_website__">You can prevent this for apps you choose by following some instructions from this website:</string>
    <string name="https______dontkillmyapp__com__">https://dontkillmyapp.com/</string>
    <string name="Show_me_how">Show me how</string>
    <string name="Change_notification_access">Change notification access</string>
    <string name="Run_in_background">Run in background</string>
</resources>