<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cy.AlexandrosGavriel.notificationReplier.SettingsActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settingsMatCVMidl"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/color_OutLine"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/settingsTVChNotAccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="  Change Notification Access" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/settingsBtnChNotAccess"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:background="@drawable/button_neutral_background"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/OpenSettings" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <!--<TextView
                    android:id="@+id/settingsTVRunInBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="  Keep app in background" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Switch
                    android:id="@+id/settingsSwitchRunInBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="4dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml"
                    android:theme="@style/SCBSwitch"/>-->

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/settingsBtnLogOut"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="90dp"
                android:layout_marginEnd="90dp"
                android:background="@drawable/button_neutral_background"
                android:text="@string/Log_Out" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settingsBtnDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_error_background"
        android:text="@string/DeleteAccount"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsMatCVMidl" />


</androidx.constraintlayout.widget.ConstraintLayout>